# bbc-news-nlp

./: .gitignore  README.md  pyproject.toml  setup.md  setup.sh
data/: annotated_test_set.csv  annotation_sample.csv  april_events_summaries.csv  gold_standard.csv  ner_training_data.csv  train_data.csv  train_final.csv  val_data.csv  val_final.csv
models/baseline-classifier/: config.json
models/ner-model/: config.json
models/weighted-classifier/: config.json
src/: apply_annotations.py  april_events.py  augment_data.py  evaluate.py  gold_standard.py  prepare_data.py  prepare_ner_data.py  split_data.py  test_ner.py  train_augmented.py  train_baseline.py  train_ner.py  train_weighted.py
