[tool.poetry]
name = "bbc-nlp"
version = "0.1.0"
description = "Advanced NLP analysis of BBC news articles using transformers."
authors = ["owhonda-moses <owhondamoses7@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.11"

spacy = { version = "^3.7.5", extras = ["transformers", "cuda12x"] }
torch = "^2.1.2"
accelerate = "^0.31.0" 

pandas = "^2.2.2"
scikit-learn = "^1.5.0"

ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"